fix whitespace bug on the right side of screen

--- a/styles.css
+++ b/styles.css
@@ -29,11 +29,14 @@ body,
 body {
     min-height: 100vh;
     margin: 0;
+    padding: 0;
 }
 
 .imageContainer {
     width: 35vw;
     position: relative;
+    margin: 0;
+    padding: 0;
 }
 
 .imageContainer img {
@@ -60,6 +63,8 @@ body {
     background-color: #1C1F53;
     width: 65vw;
     flex-direction: column;
+    margin: 0;
+    padding: 0;
 }
 
 
@@ -202,7 +207,7 @@ body {
     justify-content: center;
     position: absolute;
     bottom: 0;
-    width: 65vw;
+    width: 65%;
     color: rgb(255, 255, 255, 0.7);
     height: 2.5em;
 }
